--- a/src/pages/Cart/Cart.module.css
+++ b/src/pages/Cart/Cart.module.css
@@ -3,6 +3,8 @@
     display: flex;
     margin: 0 auto;
     padding: 50px 30px;
+    column-gap: 30px;
+    row-gap: 40px;
 }
 .cart{
     width: 70%;
@@ -70,6 +72,7 @@
     border-radius: 5px;
     background-color: rgb(139,92,246);
     color: #fff;
+    cursor: pointer;
 }
 .buttons input{
     border: none;
@@ -78,6 +81,47 @@
     text-align: center;
 }
 
+.summary{
+    height: 400px;
+    width: 100%;
+    box-shadow: 0 1px 4px rgba(0,0,0,0.16);
+    position: sticky;
+    top: 30px;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr;
+}
+.cartSummaryTitle{
+    font-size: 1.1rem;
+    font-weight: 500;
+}
+.cartSummaryContent{
+    padding: 20px 0 0 0;
+    display: grid;
+    grid-template-rows: 1fr auto auto;
+}
+.cartTotal{
+    padding: 10px 0;
+    display: flex;
+    justify-content: space-between;
+}
+.cartButtom{
+    width: 100%;
+    padding: 8px 10px;
+    background-color: rgba(139,92,246, 1);
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    margin: 20px 0 10px 0;
+    cursor: pointer;
+    transition: all 200ms ease-in-out;
+}
+.cartButtom:active{
+    background-color: rgba(139,92,246, 0.7);
+    transform: scale(.9);
+    box-shadow: 0 1px 4px rgba(0,0,0,0.16);
+}
 @media screen and (max-width: 1200px){
     .container{
         width: 100%;
